# lyricscribe

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: run-demucs.py  run-spleeter.py  run-whisper.py  whisper-wer.py
scripts/separators/: demucs.py  run-demucs.py  run-spleeter.py  spleeter.py
scripts/slurm-scripts/: run-spleeter.sh  run_whisper_large-v1.sh  run_whisper_large-v1_demucs.sh  run_whisper_large-v2.sh  run_whisper_large-v2_demucs.sh  run_whisper_large-v3-turbo.sh  run_whisper_large-v3-turbo_demucs.sh  run_whisper_large-v3.sh  run_whisper_large-v3_demucs.sh
scripts/whisper/: cli.py  fasterwhisper.py  openai.py  run-whisperx.py  schemas.py  transformers.py  whisperx.py
