[project]
name = "lyricscribe"
version = "1.0.0.dev1"
description = "Converting music to lyrics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.1.1",
    "openai-whisper>=20240930",
    "pydantic>=2.11.4",
    "transformers>=4.51.3",
    "whisperx>=3.3.4",
]

[dependency-groups]
dev = [
    "ruff>=0.11.8",
]
